--- a/test-output/old/Default suite/groups.html
+++ b/test-output/old/Default suite/groups.html
@@ -1,1 +1,4 @@
-<h2>Groups used for this test run</h2>
+<h2>Groups used for this test run</h2><table border="1">
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>sanity</td><td>LoginTest.verifyUserLogin()[pri:0, instance:com.ui.test.LoginTest@7b36aa0c]<br/></td></tr>
+<tr><td>smoke</td><td>LoginTest.verifyUserLogin()[pri:0, instance:com.ui.test.LoginTest@7b36aa0c]<br/></td></tr>
+</table>
