--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,8 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="98a49f">  <td>24/09/08 03:44:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DashBoardPageTest.verifyForTextPreseny()[pri:0, instance:com.ui.test.DashBoardPageTest@5d534f5d]">verifyForTextPreseny</td> 
-  <td>main@1862383967</td>   <td></td> </tr>
-<tr bgcolor="98a49f">  <td>24/09/08 03:44:00</td>   <td>-19367</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DashBoardPageTest.setup()[pri:0, instance:com.ui.test.DashBoardPageTest@5d534f5d]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1862383967</td>   <td></td> </tr>
+<tr bgcolor="e1e270">  <td>24/09/15 20:42:49</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyUserLogin()[pri:0, instance:com.ui.test.LoginTest@7b36aa0c]">verifyUserLogin</td> 
+  <td>main@1464191502</td>   <td></td> </tr>
+<tr bgcolor="ffbd75">  <td>24/09/15 20:42:35</td>   <td>-14217</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setup()[pri:0, instance:com.ui.test.LoginTest@7b36aa0c]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1464191502</td>   <td></td> </tr>
 </table>
